--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.higallery">
 
-    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -13,11 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HiGallery">
         <activity
-            android:name=".Login"
+            android:name=".activities.VaultAlbumActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activities.LoginVaultActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:configChanges="locale|orientation"
+            android:launchMode="singleTop"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +30,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SettingsActivity"
+            android:name=".activities.SettingsActivity"
             android:configChanges="locale|orientation" />
     </application>
 
