--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,13 @@
 
     <application
         android:allowBackup="true"
+        android:configChanges="locale|orientation"
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HiGallery">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:configChanges="locale|orientation"
@@ -24,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.PhotoDetailActivity"
+            android:name=".activities.PhotoActivity"
             android:exported="true">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -39,7 +40,7 @@
 
         <activity
             android:name=".activities.SettingsActivity"
-            android:configChanges="locale|orientation" />
+            android:exported="true" />
     </application>
 
 </manifest>
