--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,11 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    externalNativeBuild{
+        cmake{
+            path "src/main/jni/CMakeLists.txt"
+        }
+    }
 
     buildTypes {
         release {
