--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.higallery">
+    package="com.team2.higallery">
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -38,9 +38,11 @@
         <activity
             android:name=".activities.LoginVaultActivity"
             android:exported="true" />
-
         <activity
             android:name=".activities.SettingsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activities.SignUpVaultActivity"
             android:exported="true" />
     </application>
 
