Fix một số cái sau khi merge, chủ yếu là package name example->team2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.team2.higallery">
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28"
+        tools:ignore="ScopedStorage" />
 
     <application
         android:largeHeap="true"
@@ -44,6 +48,9 @@
             android:exported="true" />
         <activity
             android:name=".activities.SignUpVaultActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activities.EditActivity"
             android:exported="true" />
     </application>
 
