thêm appbar edit, dialog lúc quay về

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,9 @@
             android:exported="true" />
         <activity
             android:name=".activities.EditActivity"
-            android:exported="true" />
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
