--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,11 +46,11 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
     implementation platform('com.google.firebase:firebase-bom:28.4.2')
     implementation 'com.google.firebase:firebase-auth'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    implementation 'com.pes.materialcolorpicker:library:1.2.5'
 }
