--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.SET_WALLPAPER" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -55,6 +56,9 @@
             android:exported="true" />
         <activity
             android:name=".activities.TrashActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activities.ConstrainLayout"
             android:exported="true" />
     </application>
 
