Khôi phục PIN, cải thiện hiệu năng (thread), thuật toán mã hóa (của Lợi), tạm thời ẩn New album

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
             android:name=".activities.TrashActivity"
             android:exported="true" />
         <activity
-            android:name=".activities.ConstrainLayout"
+            android:name=".activities.SetWallActivity"
             android:exported="true" />
         <provider
             android:name="androidx.core.content.FileProvider"
